--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,55 @@
   position: absolute;
   color: black;
 }
+
+.modal {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(51 65 85 / 0.95);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+  width: 40vw;
+  height: 60vh;
+  overflow-y: auto;
+}
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.close-button {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+.modal-description {
+  margin-bottom: 20px;
+}
+.modal-reliability {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.comments {
+  margin-top: 20px;
+}
+.comment {
+  background-color: rgba(80, 110, 151, 0.95);
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+
+@media (max-width: 600px) {
+  .modal {
+    width: 100vw;
+    height: 100vh;
+  }
+}
